# melody-bay

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: README.md  imported_song_player.rs  sequenced_arrangement.rs  sound_data_bridge.rs  spatial_effects_mixer.rs  webaudio_synth_lab.rs  worklet_instrument.rs
examples/assets/: ober1.xm
src/: lib.rs
src/core/: private.rs  waveform.rs
src/import/: api.rs  bytes.rs  midi.rs  module_aliases.rs
src/import/tracker/: effects.rs  mod_tracker.rs  types.rs  xm.rs
src/render/: bus.rs  compiled.rs  dsp.rs  graph_state.rs  sample_voice.rs
src/sequencer/: automation_targets.rs  models.rs
src/webaudio/: buffer.rs  channel_config.rs  context.rs  node.rs  types.rs
src/webaudio/nodes/: channel_private.rs  gain_param.rs  panner.rs  processing.rs  sources.rs
src/webaudio/param/: kind.rs  timeline.rs
tests/: importers.rs  sequencer_models.rs  spec_api.rs  webaudio_graph.rs
